--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -11,7 +10,6 @@
     "http-status-codes": "^2.2.0"
   },
   "devDependencies": {},
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js"
@@ -25,5 +23,5 @@
   "bugs": {
     "url": "https://github.com/zzadu/santas-server/issues"
   },
-
-  "homepage": "https://github.com/zzadu/santas-server#readme"}
+  "homepage": "https://github.com/zzadu/santas-server#readme"
+}
