--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "santas-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Santas",
   "main": "main.js",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.19.2"
   },
   "devDependencies": {},
   "scripts": {
