--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "http-status-codes": "^2.2.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.2"
   },
