--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Santas",
   "main": "main.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.2"
+    "sequelize": "^6.19.2",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {},
   "scripts": {
