--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "http-status-codes": "^2.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local-sequelize": "^0.9.0",
     "sequelize": "^6.19.2",
     "xml2js": "^0.4.23"
   },
