--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.6.0",
     "passport-local-sequelize": "^0.9.0",
     "sequelize": "^6.19.2",
+    "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {},
