--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "http-status-codes": "^2.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.2.6",
     "passport": "^0.6.0",
-    "passport-local-sequelize": "^0.9.0",
+    "passport-local-sequelize": "^0.8.0",
     "sequelize": "^6.19.2",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js"
