--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "http-status-codes": "^2.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "node-fetch": "^3.2.6",
+    "node-fetch": "^2.6.7",
     "passport": "^0.6.0",
-    "passport-local-sequelize": "^0.8.0",
-    "sequelize": "^6.19.2",
+    "passport-local": "^1.0.0",
+    "passport-local-sequelize": "^0.9.0",
+    "sequelize": "^6.20.1",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
   },
