--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-sequelize": "^0.9.0",
+    "randomstring": "^1.2.2",
     "sequelize": "^6.20.1",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23"
